--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,87 @@ p {
     width: 100%;
     float: left;
     padding: 50px 8%;
-    background-color: #fc4349;
+    background-color: #2C3E50;
 }
 
 .logo a {
     width: 320px;
     height: 105px;
     float: left;
-    background: url(../img/logo.png) no-repeat;
+    background: url(../img/logo05.png) no-repeat;
     font-size: 0;
+}
+
+.cabecalho form {
+    width: 30%;
+    float: right;
+}
+
+.cabecalho input[type="text"] {
+    width: 85%;
+    float: left;
+    padding: 15px 10px;
+    border-radius: 5px 0 0 5px;
+    background-color: initial;
+    border: 1px solid white;
+    color: wheat;
+}
+
+.cabecalho button[type="search"] {
+    width: 15%;
+    float: right;
+    padding: 15px 10px;
+    background-color: #262626;
+    color: white;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0;
+    border: 1px solid white;
+}
+
+
+/* MENU */
+
+.menu {
+    width: 100%;
+    float: left;
+    background-color: #111;
+    padding: 18px 8%;
+}
+
+.menu li {
+    float: left;
+}
+
+.menu li a {
+    color: #9d9d9d;
+    margin-right: 25px;
+}
+
+.menu li a:hover {
+    color: #fff;
+}
+
+
+/*  SOCIAL ICONS */
+
+.social-icons {
+    float: right;
+}
+
+.social-icons a {
+    color: #fff;
+    float: left;
+    margin-left: 12px;
+}
+
+.btn-facebook:hover {
+    color: #3b5998;
+}
+
+.btn-twitter:hover {
+    color: #1da1f2;
+}
+
+.btn-google:hover {
+    color: #ea4235;
 }
