--- a/css/style.css
+++ b/css/style.css
@@ -146,16 +146,16 @@ p {
 }
 
 
-/* MENU LATERAL */
+/* MENU ESQUERDO */
 
 .menu-esquerdo {
     width: 20%;
     float: left;
-    padding: 10px 20px;
+    padding: 10px;
     background-color: #777;
     border: solid 1px;
     border-radius: 5px;
-    margin: 25px 0px 0px 15px;
+    margin: 25px;
 }
 
 .menu-esquerdo a {
@@ -165,19 +165,77 @@ p {
     display: block;
     padding: 12px;
     text-decoration: none;
-    border: solid 1px #111;
+    border: solid 1px white;
+    border-radius: 4px;
 }
 
 .menu-esquerdo a.fazer {
     background-color: #111;
     color: white;
+    border: solid 1px #111;
 }
 
 .menu-esquerdo a.destaques {
     background-color: #111;
     color: white;
+    border: solid 1px #111;
 }
 
-.menu-esquerdo a:hover {
-    background-color: #ccc;
+
+/* SIDEBAR */
+
+.onde-estamos {
+    width: 30%;
+    float: right;
+    padding: 10px 20px;
+    background-color: #777;
+    border: solid 1px;
+    border-radius: 5px;
+    margin: 25px;
+}
+
+.onde-estamos p {
+    color: black
+}
+
+.onde-estamos h2 {
+    margin-bottom: 5px;
+}
+
+.onde-estamos iframe {
+    width: 100%;
+    height: 250px;
+    margin: 20px 0,
+}
+
+.onde-estamos li {
+    color: black;
+    margin-bottom: 10px;
+}
+
+.onde-estamos i {
+    margin-right: 5px;
+}
+
+
+/* RODAPÉ */
+
+.rodape {
+    width: 100%;
+    float: left;
+    padding: 20px 8%;
+    background-color: #2C3E50;
+    border-radius: solid 1px #111;
+}
+
+.rodape h1.logo {
+    width: 320px;
+    height: 105px;
+    background: url(../img/logo.png) no-repeat;
+    font-size: 0;
+    float: unset;
+}
+
+.rodape a {
+    float: right;
 }
