--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,15 @@ p {
 .rodape a {
     float: right;
 }
+
+
+/* PRINCIPAL */
+
+.principal {
+    width: 100%;
+    padding: 20px 8%;
+}
+
+.principal p {
+    margin-bottom: 15px;
+}
