--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,40 @@ p {
 
 .btn-menu:hover {
     color: red;
+    background-color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: fixed;
+    background-color: #f9f9f9;
+    min-width: 21px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 
@@ -259,8 +293,5 @@ p {
 .principal {
     width: 100%;
     padding: 20px 8%;
-}
-
-.principal p {
-    margin-bottom: 1
+    float: initial;
 }
