--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ p {
 
 .btn-menu:hover {
     color: red;
-    background-color: white;
+    background-color: #111;
     padding: 16px;
     font-size: 16px;
     border: none;
