--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: fixed;
-    background-color: #f9f9f9;
+    background-color: #2C3E50;
     min-width: 21px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
