--- a/css/style.css
+++ b/css/style.css
@@ -120,26 +120,31 @@ p {
     color: sandybrown;
 }
 
+.btn-menu {
+    color: #9d9d9d;
+    margin-right: 25px;
+}
+
 .btn-menu:hover {
     color: red;
     background-color: #111;
-    padding: 16px;
-    font-size: 16px;
     border: none;
     cursor: pointer;
 }
 
 li.dropdown {
+    position: relative;
     display: inline-block;
 }
 
 .dropdown-content {
     display: none;
-    position: fixed;
+    position: absolute;
     background-color: #2C3E50;
     min-width: 21px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    border-radius: 5px;
 }
 
 .dropdown-content a {
@@ -151,6 +156,7 @@ li.dropdown {
 }
 
 .dropdown-content a:hover {
+    color: black;
     background-color: #f1f1f1
 }
 
