--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ li.dropdown {
     text-decoration: none;
     display: block;
     text-align: left;
+    border-radius: 5px;
 }
 
 .dropdown-content a:hover {
